Revert to java 8